chore: enhance get profile student
