# openapi/src/main/kotlin/com/rizalanggoro/presensigo/openapi/models/GetAllStudentsRes.kt
@@ -1,38 +1,0 @@
-/**
- *
- * Please note:
- * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * Do not edit this file manually.
- *
- */
-
-@file:Suppress(
-    "ArrayInDataClass",
-    "EnumEntryName",
-    "RemoveRedundantQualifierName",
-    "UnusedImport"
-)
-
-package com.rizalanggoro.presensigo.openapi.models
-
-import com.rizalanggoro.presensigo.openapi.models.DomainsStudentMajorClassroom
-
-import com.google.gson.annotations.SerializedName
-
-/**
- * 
- *
- * @param students 
- */
-
-
-data class GetAllStudentsRes (
-
-    @SerializedName("students")
-    val students: kotlin.collections.List<DomainsStudentMajorClassroom>
-
-) {
-
-
-}
-
