# swagger.json
@@ -292,7 +292,7 @@
                 "tags": [
                     "student"
                 ],
-                "operationId": "refreshTokenStudent",
+                "operationId": "RefreshTokenStudent",
                 "parameters": [
                     {
                         "description": "body",
@@ -1252,7 +1252,7 @@
                 "tags": [
                     "attendance"
                 ],
-                "operationId": "createGeneralAttendanceRecordStudent",
+                "operationId": "CreateGeneralAttendanceRecordStudent",
                 "parameters": [
                     {
                         "description": "body",
@@ -1544,26 +1544,17 @@
                 }
             }
         },
-        "/api/v1/students": {
+        "/api/v1/students/profile": {
             "get": {
                 "tags": [
                     "student"
                 ],
-                "operationId": "getAllStudents",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Keyword",
-                        "name": "keyword",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
+                "operationId": "GetProfileStudent",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/GetAllStudentsRes"
+                            "$ref": "#/definitions/GetProfileStudentRes"
                         }
                     }
                 }
@@ -1574,7 +1565,7 @@
                 "tags": [
                     "attendance"
                 ],
-                "operationId": "createSubjectAttendanceRecordStudent",
+                "operationId": "CreateSubjectAttendanceRecordStudent",
                 "parameters": [
                     {
                         "description": "body",
@@ -2070,20 +2061,6 @@
                 }
             }
         },
-        "GetAllStudentsRes": {
-            "type": "object",
-            "required": [
-                "students"
-            ],
-            "properties": {
-                "students": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domains.StudentMajorClassroom"
-                    }
-                }
-            }
-        },
         "GetAllSubjectAttendanceRecordsItem": {
             "type": "object",
             "required": [
@@ -2214,6 +2191,33 @@
             "properties": {
                 "major": {
                     "$ref": "#/definitions/major"
+                }
+            }
+        },
+        "GetProfileStudentRes": {
+            "type": "object",
+            "required": [
+                "batch",
+                "classroom",
+                "major",
+                "school",
+                "student"
+            ],
+            "properties": {
+                "batch": {
+                    "$ref": "#/definitions/batch"
+                },
+                "classroom": {
+                    "$ref": "#/definitions/classroom"
+                },
+                "major": {
+                    "$ref": "#/definitions/major"
+                },
+                "school": {
+                    "$ref": "#/definitions/School"
+                },
+                "student": {
+                    "$ref": "#/definitions/Student"
                 }
             }
         },
@@ -2583,25 +2587,6 @@
                 },
                 "student_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "domains.StudentMajorClassroom": {
-            "type": "object",
-            "required": [
-                "classroom",
-                "major",
-                "student"
-            ],
-            "properties": {
-                "classroom": {
-                    "$ref": "#/definitions/classroom"
-                },
-                "major": {
-                    "$ref": "#/definitions/major"
-                },
-                "student": {
-                    "$ref": "#/definitions/Student"
                 }
             }
         },
